--- a/makefile/makefile
+++ b/makefile/makefile
@@ -10,3 +10,12 @@ file1.txt: file0.txt
 file2.txt file3.txt: file1.txt
 	touch file2.txt
 	touch file3.txt
+
+all: maker process
+
+maker:
+	touch ex0.txt ex1.txt
+
+.PHONY: all maker process
+
+ex0.txt ex1.txt: maker
