--- a/docker_and_kuber/kubernetes_in_action/sample_descriptor_for_pod.yaml
+++ b/docker_and_kuber/kubernetes_in_action/sample_descriptor_for_pod.yaml
@@ -1,11 +1,13 @@
 apiVersion: v1
 kind: Pod
 metadata:
-    name: kubia-manual-v2
+    name: kubia-manual-v3
     labels:
         creation_method: manual
         env: prod
 spec:
+    nodeSelector:
+        capable: "true"
     containers:
         - image: luksa/kubia
           name: kubia
