--- a/docker_and_kuber/kubernetes_in_action/sample_descriptor_for_pod.yaml
+++ b/docker_and_kuber/kubernetes_in_action/sample_descriptor_for_pod.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-    name: kubia-manual-v3
+    name: kubia-manual-v3-liveness
     labels:
         creation_method: manual
         env: prod
@@ -9,8 +9,15 @@ spec:
     nodeSelector:
         capable: "true"
     containers:
-        - image: luksa/kubia
+        - image: luksa/kubia-unhealthy
           name: kubia
+          livenessProbe:
+              initialDelaySeconds: 15
+              httpGet:
+                  path: /
+                  port: 8080
+
+
           ports:
               - containerPort: 8080
                 protocol: TCP
