Added completions and parallelism to job

--- a/docker_and_kuber/kubernetes_in_action/job.yaml
+++ b/docker_and_kuber/kubernetes_in_action/job.yaml
@@ -3,6 +3,8 @@ kind: Job
 metadata:
     name: batch-job
 spec:
+    completions: 5
+    parallelism: 2
     template:
         metadata:
             labels:
