--- a/docker_and_kuber/kubernetes_in_action/service.yaml
+++ b/docker_and_kuber/kubernetes_in_action/service.yaml
@@ -3,8 +3,13 @@ kind: Service
 metadata:
     name: kubia
 spec:
+    sessionAffinity: ClientIP
     ports:
-        - port: 80
+        - name: http
+          port: 80
           targetPort: 8080
+        - name: https
+          port: 443
+          targetPort: 8443
     selector:
         app: kubia
