--- a/docker_and_kuber/kubernetes_in_action/services/ingress.yaml
+++ b/docker_and_kuber/kubernetes_in_action/services/ingress.yaml
@@ -3,6 +3,10 @@ kind: Ingress
 metadata:
     name: kubia
 spec:
+    tls:
+    - hosts:
+      - kubia.example.com
+      secretName: tls-secret
     rules:
         - host: kubia.example.com
           http:
