--- a/docker_and_kuber/ansible_playground/playbook/ssh.config
+++ b/docker_and_kuber/ansible_playground/playbook/ssh.config
@@ -4,8 +4,13 @@ Host *
     HashKnownHosts yes
     IdentityFile ~/.ssh/id_rsa
 Host server1
+    HostName meet.ce.aut.ac.ir
+    User elmi
+    port 50062
+
+Host server3
     HostName 127.0.0.1
-    User root
+    user root
     port 2224
 
 Host server2
